Fix: hamburger button for desktop and mobile screen to avoid tiny layout shift

--- a/src/dialog/dialog.css
+++ b/src/dialog/dialog.css
@@ -45,7 +45,6 @@ menu.dialog-menu > *:focus {
 
 label {
   margin: 1rem 0 0.5rem;
-  font-size: 1.4rem;
   width: 100%;
   color: #bbb;
   font-size: 1.2rem;
